@@ -1,3 +1,7 @@
+Upcoming:
+- New 'allowvoid' keyword for scattered references. This allows you to specify that a building can be placed in void chunks. By default this is false
+- Reintroduced and tweaked the 'floating' profile. This is meant to be used in combination with Lost Worlds mod
+
 1.20-7.0.4:
 - TqLxQuanZ fixed a problem where a building has an extreme rare chance to not generate
 
